added the secend blogs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first github repo</title>
+    <link rel="stylesheet" href="style/b;og.css">
 </head>
 <body>
-    
+    <h3>My first git class</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus error excepturi minima accusantium explicabo quia voluptatum, odio culpa et officia possimus cum quasi? Aut id nostrum cupiditate atque totam!</p>
+    <div>
+        <h3>Its a practise task</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi illo quod, commodi iusto fuga officia sit obcaecati vero odio quam porro doloribus voluptate non dolorem quidem similique facere itaque explicabo?</p>
+    </div>
 </body>
 </html>
