--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <h3>Its a practise task</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi illo quod, commodi iusto fuga officia sit obcaecati vero odio quam porro doloribus voluptate non dolorem quidem similique facere itaque explicabo?</p>
     </div>
+    <img src="premium_photo-1663847014348-665180f1f380.jpg" alt="nature" sizes="400px">
 </body>
 </html>
